// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`policy table changes pages when a pagination link is clicked on 1`] = `
Array [
  "testy0",
  "testy1",
  "testy10",
  "testy100",
  "testy101",
  "testy102",
  "testy103",
  "testy104",
  "testy11",
  "testy12",
]
`;

exports[`policy table changes pages when a pagination link is clicked on 2`] = `
Array [
  "testy13",
  "testy14",
  "testy15",
  "testy16",
  "testy17",
  "testy18",
  "testy19",
  "testy2",
  "testy20",
  "testy21",
]
`;

exports[`policy table filters based on content of search input 1`] = `
Array [
  "testy0",
]
`;

exports[`policy table shows empty state when there are no policies 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
  role="main"
>
  <div
    class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge"
  >
    <div
      class="euiEmptyPrompt__main"
    >
      <div
        class="euiEmptyPrompt__icon"
      >
        <span
          color="subdued"
          data-euiicon-type="managementApp"
        />
      </div>
      <div
        class="euiEmptyPrompt__content"
      >
        <div
          class="euiEmptyPrompt__contentInner"
        >
          <h1
            class="euiTitle euiTitle--medium"
          >
            Create your first index lifecycle policy
          </h1>
          <span
            class="euiTextColor euiTextColor--subdued"
          >
            <div
              class="euiSpacer euiSpacer--m"
            />
            <div
              class="euiText euiText--medium"
            >
              <p>
                 An index lifecycle policy helps you manage your indices as they age.
              </p>
            </div>
          </span>
          <div
            class="euiSpacer euiSpacer--l"
          />
          <button
            class="euiButton euiButton--primary euiButton--fill"
            data-test-subj="createPolicyButton"
            type="button"
          >
            <span
              class="euiButtonContent euiButton__content"
            >
              <span
                class="euiButtonContent__icon"
                color="inherit"
                data-euiicon-type="plusInCircle"
              />
              <span
                class="euiButton__text"
              >
                Create policy
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`policy table sorts when linked index templates header is clicked 1`] = `
Array [
  "testy1",
  "testy3",
  "testy5",
  "testy7",
  "testy9",
  "testy11",
  "testy13",
  "testy15",
  "testy17",
  "testy19",
]
`;

exports[`policy table sorts when linked index templates header is clicked 2`] = `
Array [
  "testy0",
  "testy2",
  "testy4",
  "testy6",
  "testy8",
  "testy10",
  "testy12",
  "testy14",
  "testy16",
  "testy18",
]
`;

exports[`policy table sorts when linked indices header is clicked 1`] = `
Array [
  "testy1",
  "testy3",
  "testy5",
  "testy7",
  "testy9",
  "testy11",
  "testy13",
  "testy15",
  "testy17",
  "testy19",
]
`;

exports[`policy table sorts when linked indices header is clicked 2`] = `
Array [
  "testy0",
  "testy2",
  "testy4",
  "testy6",
  "testy8",
  "testy10",
  "testy12",
  "testy14",
  "testy16",
  "testy18",
]
`;

exports[`policy table sorts when modified date header is clicked 1`] = `
Array [
  "testy0",
  "testy104",
  "testy103",
  "testy102",
  "testy101",
  "testy100",
  "testy99",
  "testy98",
  "testy97",
  "testy96",
]
`;

exports[`policy table sorts when modified date header is clicked 2`] = `
Array [
  "testy1",
  "testy2",
  "testy3",
  "testy4",
  "testy5",
  "testy6",
  "testy7",
  "testy8",
  "testy9",
  "testy10",
]
`;

exports[`policy table sorts when name header is clicked 1`] = `
Array [
  "testy99",
  "testy98",
  "testy97",
  "testy96",
  "testy95",
  "testy94",
  "testy93",
  "testy92",
  "testy91",
  "testy90",
]
`;

exports[`policy table sorts when name header is clicked 2`] = `
Array [
  "testy0",
  "testy1",
  "testy2",
  "testy3",
  "testy4",
  "testy5",
  "testy6",
  "testy7",
  "testy8",
  "testy9",
]
`;
